--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,8 @@
+plugins:
+  - rubocop-sorted_methods_by_call
+
 AllCops:
+  NewCops: enable
   TargetRubyVersion: 2.6
 
 Style/StringLiterals:
@@ -11,3 +15,6 @@ Style/StringLiteralsInInterpolation:
 
 Layout/LineLength:
   Max: 120
+
+SortedMethodsByCall/Waterfall:
+  Enabled: true
